"쪽지 쓰기 insert 완료 "  " 쪽지 쓰기 아이디 검색"  "쪽지 페이징처리 해야함"

--- a/src/main/resources/templates/message/get_letter.html
+++ b/src/main/resources/templates/message/get_letter.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" th:href="@{/css/message/get_letter.css}" />
     <link rel="stylesheet" th:href="@{/css/main/mainpage.css}" />
-    <script defer th:src="@{/js/message/get_letter.js}"></script>
+    <script type="module" defer th:src="@{/js/message/get_letter.js}"></script>
     <title>Document</title>
   </head>
   <body>
@@ -32,9 +32,9 @@
              
             </ul>
             <div class="main__post-write-btn-box">
-              <a href="">쪽지쓰기</a>
+              <a th:href="@{/message/letter/write}">쪽지쓰기</a>
               <div class="get-letter-delete-btn">
-                <button type="submit" class="submit-btn">삭제하기</button>
+                <button type="button" class="delete-submit-btn" data-id="">삭제하기</button>
               </div>
             </div>
             
@@ -47,9 +47,9 @@
           </div>
           <div th:each="messageDto : ${getMessageList}" class="main__post-search-result-box">
             <ul>
-              <li class="main__post-result-li">
+              <li class="main__post-result-li" th:data-id="${messageDto.messageId}">
                 <p class="main__post-titie-info-box">
-                    <input type="checkbox" name="" />
+                    <input type="checkbox" class="message-check" name="" th:data-id="${messageDto.messageId}"/>
                   <span th:text="${messageDto.messageTitle}"></span>
                   <img src="" alt="" />
                 </p>
@@ -72,7 +72,7 @@
               <a href="" class="letter-list-page-a">
                 <li class="page-num prev">&lt</li>
               </a>
-    
+
               <a href="" class="letter-list-page-a">
                 <li class="page-num">1</li>
               </a>
@@ -88,7 +88,7 @@
               <a href="" class="letter-list-page-a">
                 <li class="page-num">5</li>
               </a>
-    
+
               <a href="" class="letter-list-page-a">
                 <li class="page-num next">&gt</li>
               </a>
