--- a/src/main/resources/templates/message/send_letter.html
+++ b/src/main/resources/templates/message/send_letter.html
@@ -30,7 +30,7 @@
              
             </ul>
             <div class="main__post-write-btn-box">
-              <a href="">쪽지쓰기</a>
+              <a th:href="@{/message/letter/write}">쪽지쓰기</a>
               <div class="get-letter-delete-btn">
                 <button type="submit" class="submit-btn">삭제하기</button>
               </div>
