--- a/src/main/resources/static/css/message/letterWrite.css
+++ b/src/main/resources/static/css/message/letterWrite.css
@@ -1,7 +1,4 @@
-@font-face {
-  font-family: "neon";
-  src: url("../font/SpoqaHanSansNeo_all/SpoqaHanSansNeo_TTF_original/SpoqaHanSansNeo-Bold.ttf");
-}
+
 
 * {
   margin: 0;
@@ -208,6 +205,11 @@ section > div {
 }
 
 #letter-id-text{
+  width: 250px;
+  height: 26px;
+}
+
+.message-title{
   width: 250px;
   height: 26px;
 }
