--- a/src/main/resources/templates/message/letterView.html
+++ b/src/main/resources/templates/message/letterView.html
@@ -5,39 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" th:href="@{/css/message/letterView.css}" />
+    <link rel="stylesheet" th:href="@{/css/main/mainpage.css}" />
     <script defer th:src="@{/js/message/letterView.js}"></script>
   </head>
   <body>
     <form action="">
-      <header>
-        <div class="header_layout">
-          <h1 class="header_logo">
-            <div class="header_logo_layout">
-              <a href="">
-                <!--홈페이지 버튼 -->
-                <img
-                  src="../myPageImg/HippoBook_logo.png"
-                  alt=""
-                  class="header_logo_images"
-                />
-              </a>
-            </div>
-          </h1>
-          <div class="header_right_layout">
-            <a href="">
-              <!-- 알람 페이지 이동  -->
-              <img
-                src="../myPageImg/alarm.png"
-                alt=""
-                class="header_right_alarm"
-              />
-            </a>
-            <ul class="header_right_login">
-              <a href="" class="header_right_login_box">로그인</a>
-            </ul>
-          </div>
-        </div>
-      </header>
+      <header class="header" th:replace="~{/fragment/header :: header}"></header>
 
       <main>
         <div class="main_top">
