--- a/src/main/resources/templates/mypage/myPageInt.html
+++ b/src/main/resources/templates/mypage/myPageInt.html
@@ -59,9 +59,9 @@
             <div class="profile-all">
                 <div id="profile-photo">
 
-                    <img th:if="${profilePhoto.userProfileId == null}"
-                         th:src="@{/imgs/mypage/free-icon-hippo-3250992.png}">
-                    <img th:unless="${profilePhoto.userProfileId == null}"
+                    <img th:if="${profilePhoto.userProfileName == null}"
+                         th:src="@{/imgs/mypage/free-icon-hippo-3250992.png}" alt=""/>
+                    <img th:unless="${profilePhoto.userProfileName == null}"
                          th:src="@{'/profile/' + ${profilePhoto.userProfileUploadPath} + '/' + ${profilePhoto.userProfileUuid} + '_' + ${profilePhoto.userProfileName}}"
                          alt=""/>
                 </div>
