--- a/src/main/resources/templates/mypage/myPageInt_manage.html
+++ b/src/main/resources/templates/mypage/myPageInt_manage.html
@@ -72,9 +72,9 @@
         <section class="profile" th:object="${profileDto}">
             <div class="profile-all">
                 <div id="profile-photo">
-                    <img th:if="${profilePhoto.userProfileId == null}"
+                    <img th:if="${profilePhoto.userProfileName == null}"
                          th:src="@{/imgs/mypage/free-icon-hippo-3250992.png}" alt=""/>
-                    <img th:unless="${profilePhoto.userProfileId == null}"
+                    <img th:unless="${profilePhoto.userProfileName == null}"
                          th:src="@{'/profile/' + ${profilePhoto.userProfileUploadPath} + '/' + ${profilePhoto.userProfileUuid} + '_' + ${profilePhoto.userProfileName}}"
                          alt=""/>
                 </div>
@@ -110,9 +110,9 @@
     <div class="main__manage-center-content-box">
         <div class="main__my-etc-info">
             <div class="manage-profile-photo">
-                <img th:if="${profilePhoto.userProfileId == null}"
+                <img th:if="${profilePhoto.userProfileName == null}"
                      th:src="@{/imgs/mypage/free-icon-hippo-3250992.png}" alt=""/>
-                <img th:unless="${profilePhoto.userProfileId == null}"
+                <img th:unless="${profilePhoto.userProfileName == null}"
                      th:src="@{'/profile/' + ${profilePhoto.userProfileUploadPath} + '/' + ${profilePhoto.userProfileUuid} + '_' + ${profilePhoto.userProfileName}}"
                      alt=""/>
             </div>
