--- a/src/main/resources/templates/alarm/alarmpage.html
+++ b/src/main/resources/templates/alarm/alarmpage.html
@@ -17,17 +17,16 @@
             <div  class="cont">
                 <div class="alarm_inner">
                     <div class="alarm_content">
-                        <a th:href="@{/mypage/int}" class="alarm_book" th:if= "${hasAlarms}"> <!--쪽지 페이지 이동-->
+                        <a th:href="@{/mypage/int}" class="alarm_book" th:if= "${findAlarms.size() != 0}"> <!--쪽지 페이지 이동-->
                             <div class="alarm_box" th:each="findAlarms:${findAlarms}">
                                 <div class="alarm_box_content" th:text="${findAlarms.userNickName} + 님에게  + ${findAlarms.alarmContent}"></div>
                             </div>
                         </a>
-                        <div class="alarm_book" th:unless="${hasAlarms}">  <!--알람 없을 때 -->
-                            <div class="alarm_none">새로운 알람이 없습니다.</div>
+                        <div class="alarm_book" th:unless="${findAlarms.size() != 0}">  <!--알람 없을 때 -->
+                            <div class="alarm_box_content">새로운 알람이 없습니다.</div>
                         </div>
                     </div>
                 </div>
-
             </div>
         </li>
         <li>
@@ -35,9 +34,9 @@
             <div class="cont">
                 <div class="alarm_inner">
                     <div class="alarm_content">
-                        <div  class="alarm_box">
-                            <a th:href="@{/book/info}" class="alarm_book"> <!--북 페이지 이동-->
-                                <div>공지사항이 없습니다</div>
+                        <div  class="alarm_book">
+                            <a th:href="@{/book/info}" class="alarm_box"> <!--북 페이지 이동-->
+                                <div class="alarm_box_content">공지사항이 없습니다</div>
                             </a>
                         </div>
                     </div>
