게시글 메인 작업 완 뷰 페이지 작업 중

--- a/src/main/resources/static/css/board/post_main.css
+++ b/src/main/resources/static/css/board/post_main.css
@@ -8,6 +8,16 @@ ul {
   list-style-type: none;
 }
 
+a:link{
+  color: #605b5b;
+  font-weight: bold;
+}
+
+a:visited{
+  color: #605b5b;
+  font-weight: bold;
+}
+
 .main__post-content-container {
   display: flex;
   justify-content: center;
@@ -325,6 +335,9 @@ ul {
   text-align: center;
 }
 
-.post-menu-li > a {
-  pointer-events: none;
-}
+/*.post-menu-li > a {*/
+/*  pointer-events: none;*/
+/*}*/
+
+
+
