--- a/src/main/resources/templates/board/post_main.html
+++ b/src/main/resources/templates/board/post_main.html
@@ -12,7 +12,7 @@
   <body>
     <header></header>
     <div class="main__post-content-container">
-      <form action="">
+<!--      <form action="">-->
         <main class="main__post-content-inner-box">
           <div class="main__post-title-search-box">
             <h1 class="main__title-box">
@@ -91,7 +91,7 @@
 
           </div>
         </main>
-      </form>
+<!--      </form>-->
     </div>
     <div th:replace="~{/chatbot/chatbot :: chatbot-box}">
     </div>
