--- a/src/main/resources/templates/message/letterWrite.html
+++ b/src/main/resources/templates/message/letterWrite.html
@@ -68,7 +68,7 @@
             </div>
             <div class="letter-id-box-input" >
               <input type="text" id="letter-id-text" name="userNickname" />
-              <button type="button" id="letter-id-button">닉네임 검색</button>
+              <button type="button" id="letter-id-button" onclick="alert('신청이 완료 되었습니다.')">닉네임 검색</button>
             </div>
           </div>
 
