--- a/src/main/resources/templates/message/get_letter.html
+++ b/src/main/resources/templates/message/get_letter.html
@@ -51,9 +51,11 @@
               <li class="main__post-result-li" th:data-id="${messageDto.messageId}">
                 <p class="main__post-titie-info-box">
                     <input type="checkbox" class="message-check" name="" th:data-id="${messageDto.messageId}"/>
+                  <a th:href="@{/message/letter/view(messageId=${messageDto.messageId})}">
                   <span th:text="${messageDto.messageTitle}">
-                    <button type="submit"></button>
+
                   </span>
+                    </a>
                   <img src="" alt="" />
                 </p>
                 <div class="main__post-detail-info-box">
