TestUserSMSService SMS 문자인증 테스트 클래스 생성 (미완성) , application.yml 에 coolsms api Key , Secret 생성

--- a/src/main/resources/templates/user/register.html
+++ b/src/main/resources/templates/user/register.html
@@ -104,7 +104,7 @@
                                            placeholder="01012345678"
                                            class="mds-input-field" name="userPhonenumber">
                                 </div>
-                                <button type="button" class="phone-info-code-button" onclick="takeTarget()">
+                                <button type="button" class="phone-info-code-button" onclick="takeTarget()" name="">
                                     <span>인증번호 발송</span>
                                 </button>
                             </div>
