--- a/src/main/resources/static/css/mypage/myWriteContent.css
+++ b/src/main/resources/static/css/mypage/myWriteContent.css
@@ -116,12 +116,13 @@
   a {
     text-decoration: none;
   }
-  
+
   .profile {
     display: flex;
     padding: 0 160px 0 230px;
     flex-direction: column;
     background-color: rgba(42, 193, 188, 0.8);
+    box-shadow: 0 5px 5px -2px gray;
   }
   
   .profile-all {
