--- a/src/main/resources/static/css/mypage/myPageInt_modify.css
+++ b/src/main/resources/static/css/mypage/myPageInt_modify.css
@@ -1,7 +1,4 @@
-@font-face {
-  font-family: 'neon';
-  src: url('../font/SpoqaHanSansNeo_all/SpoqaHanSansNeo_TTF_original/SpoqaHanSansNeo-Bold.ttf');
-}
+
 
 * {
   margin: 0;
@@ -125,6 +122,7 @@ a {
   padding: 0 160px 0 230px;
   flex-direction: column;
   background-color: rgba(42, 193, 188, 0.8);
+  box-shadow: 0 5px 5px -2px gray;
 }
 
 .profile-all {
@@ -144,7 +142,7 @@ a {
   background-color: whitesmoke;
 }
 
-.profile-photo > img{
+#profile-photo > img{
   width: 100%;
   height: 100%;
   border-width: 1px;
@@ -186,9 +184,10 @@ input[type='file'] {
 
 .mypage-cate {
   display: flex;
-  padding: 0 160px 0 160px;
+  padding: -1px 160px 0 160px;
   margin: 0 230px;
   width: 1440px;
+  border-bottom: 1px solid #2bc1bf;
 }
 
 .mypage-cate a {
