알림 진짜 완료 / FilterConfig, LoginFilter 완료 / 메인 배너, 모달창 수정

--- a/src/main/resources/templates/fragment/header.html
+++ b/src/main/resources/templates/fragment/header.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-<header>
+<header th:fragment="header">
     <div class="header_layout">
         <h1 class="header_logo">
             <div class="header_logo_layout">
@@ -40,6 +40,8 @@
             </ul>
         </div>
     </div>
+
+
 </header>
 </body>
 </html>
