--- a/src/main/resources/static/css/main/mainpage.css
+++ b/src/main/resources/static/css/main/mainpage.css
@@ -185,7 +185,7 @@ a {
 
 .category_popup_title {
   display: flex;
-  padding: 5px 0 15px;
+  /*padding: 5px 0 15px;*/
   font-weight: 700;
   font-size: 15px;
   color: #2bc1bf;
@@ -196,24 +196,9 @@ a {
   cursor: pointer;
 }
 
-.category_popup_title2 {
-  display: flex;
-  padding: 20px 0 15px;
-  font-weight: 700;
-  font-size: 15px;
-  color: #2bc1bf;
+.category_popup_content_box{
+  margin-bottom: 25px;
 }
-
-.category_popup_title3 {
-  margin-right: 11px;
-  font-size: 15px;
-  /*margin: 50px 0 0 25px;*/
-  color: #2bc1bf;
-  font-weight: 700;
-  cursor: pointer;
-}
-
-
 
 .main_content {
   height: auto;
