--- a/src/main/resources/static/css/board/post_view.css
+++ b/src/main/resources/static/css/board/post_view.css
@@ -274,6 +274,7 @@ ul {
   justify-content: center;
   padding: 13px 0;
   border-bottom: 1px solid #e3e3e3;
+  cursor: pointer;
 }
 
 .main__post-comment-page-box > a {
