--- a/src/main/resources/templates/mypage/myPageBookContainer.html
+++ b/src/main/resources/templates/mypage/myPageBookContainer.html
@@ -64,7 +64,7 @@
 
             <div id="profile-name">
                 <h3 th:text="*{userNickName}"></h3>
-                <span>님의 서재</span>
+                <span class="profile-name-option">님의 서재</span>
             </div>
             <div id="follow">
                 <span>팔로워 <span th:text="*{followerCnt}"></span></span>
