--- a/src/main/resources/static/css/mypage/myPageInt_manage.css
+++ b/src/main/resources/static/css/mypage/myPageInt_manage.css
@@ -1,24 +1,3 @@
-
-
-* {
-  margin: 0;
-  padding: 0;
-  font-family: neon;
-}
-header {
-  top: 0;
-  left: 0;
-  right: 0;
-  z-index: 50;
-}
-.header_layout {
-  display: flex;
-  align-items: center;
-  height: 64px;
-  margin: 0 225px;
-  width: 1440px;
-}
-
 .header_logo {
   width: 100px;
   margin: 0;
@@ -72,33 +51,19 @@ main {
   padding: 0;
 }
 
-.main_top {
-  position: sticky;
-  top: 65px;
-  z-index: 50;
-  width: 100%;
-  height: 44px;
-  border-bottom: 1px solid gray;
-}
 
-.main_top_layout {
-  display: flex;
-  align-items: center;
-  position: relative;
-  padding-left: 24px;
-  margin: 0 200px;
-}
+
 
 .main_top_category {
   display: block;
-  position: relative;
+  position: sticky;
   width: 24px;
   height: 24px;
   margin-top: -1px;
   margin-right: 12px;
 }
 .main_top_category_tap {
-  position: "relative";
+  position: relative;
   left: 0;
   top: 0;
 }
@@ -119,17 +84,24 @@ a {
 
 .profile {
   display: flex;
-  padding: 0 160px 0 230px;
+  margin: 0 auto;
   flex-direction: column;
   background-color: rgba(42, 193, 188, 0.8);
   box-shadow: 0 5px 5px -2px gray;
+  width: 1440px;
+
 }
 
 .profile-all {
   display: flex;
   flex-direction: column;
-  padding: 10px;
+  padding: 27px;
   width: 1440px;
+
+}
+
+#my-favorite-book{
+  padding-left: 27px;
 }
 
 #profile-photo {
@@ -193,6 +165,10 @@ input[type="file"] {
 
 #profile-name {
   display: flex;
+}
+
+.profile-name-option{
+  margin-top: 6px;
 }
 
 #follow {
@@ -449,12 +425,7 @@ h1 {
   height: 240px;
 }
 
-button {
-  background-color: #2bc1bf;
-  height: 30px;
-  width: 50%;
-  border-radius: 20px;
-}
+
 
 #reading-book-delete-button {
   display: flex;
