--- a/src/main/resources/static/css/mypage/myPageInt_modify.css
+++ b/src/main/resources/static/css/mypage/myPageInt_modify.css
@@ -3,7 +3,7 @@
 * {
   margin: 0;
   padding: 0;
-  font-family: neon;
+
 }
 header {
   top: 0;
@@ -72,14 +72,7 @@ main {
   padding: 0;
 }
 
-.main_top {
-  position: sticky;
-  top: 65px;
-  z-index: 50;
-  width: 100%;
-  height: 44px;
-  border-bottom: 1px solid gray;
-}
+
 
 .main_top_layout {
   display: flex;
@@ -98,7 +91,7 @@ main {
   margin-right: 12px;
 }
 .main_top_category_tap {
-  position: 'relative';
+  position: relative;
   left: 0;
   top: 0;
 }
@@ -119,17 +112,27 @@ a {
 
 .profile {
   display: flex;
-  padding: 0 160px 0 230px;
+  margin: 0 auto;
   flex-direction: column;
   background-color: rgba(42, 193, 188, 0.8);
   box-shadow: 0 5px 5px -2px gray;
+  width: 1440px;
 }
 
 .profile-all {
   display: flex;
   flex-direction: column;
-  padding: 10px;
+  padding: 27px;
   width: 1440px;
+
+}
+
+.profile-name-option{
+  margin-top: 6px;
+}
+
+#my-favorite-book{
+  padding-left: 27px;
 }
 
 #profile-photo {
@@ -428,12 +431,8 @@ h1 {
   height: 240px;
 }
 
-button {
-  background-color: #2bc1bf;
-  height: 30px;
-  width: 50%;
-  border-radius: 20px;
-}
+
+
 
 #reading-book-delete-button {
   display: flex;
@@ -482,7 +481,7 @@ footer div {
 
 .main__myInfo-modify-label {
   display: block;
-  height: 40px;
+  height: 50px;
   padding: 8px 12px;
   border: 1px solid;
   border-color: rgb(203, 195, 195);
