--- a/src/main/resources/static/css/mypage/myWriteContent.css
+++ b/src/main/resources/static/css/mypage/myWriteContent.css
@@ -1,136 +1,137 @@
+* {
+  margin: 0;
+  padding: 0;
 
-  
-  * {
-    margin: 0;
-    padding: 0;
-    font-family: neon;
-  }
-  header {
-    top: 0;
-    left: 0;
-    right: 0;
-    z-index: 50;
-  }
-  .header_layout {
-    display: flex;
-    align-items: center;
-    height: 64px;
-    margin: 0 225px;
-    width: 1440px;
-  }
-  
-  .header_logo {
-    width: 100px;
-    margin: 0;
-    z-index: 1;
-  }
-  
-  .header_logo_layout {
-    overflow: hidden;
-    display: block;
-    height: 50px;
-    width: 100%;
-    margin: 1px;
-  }
-  
-  .header_logo_images {
-    width: 100px;
-    height: 40px;
-  }
-  
-  .header_right_layout {
-    display: flex;
-    align-items: center;
-    margin-left: auto;
-    margin-right: 10px;
-  }
-  
-  .header_right_alarm {
-    justify-content: center;
-    position: relative;
-    width: 24px;
-    height: 24px;
-  }
-  .header_right_login {
-    margin-left: 16px;
-  }
-  .header_right_login_box {
-    color: black;
-    background-color: #2bc1bf;
-    width: 80px;
-    height: 32px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 4px;
-    font-size: 12px;
-    text-decoration: none;
-  }
-  
-  main {
-    max-width: unset;
-    padding: 0;
-  }
-  
-  .main_top {
-    position: sticky;
-    top: 65px;
-    z-index: 50;
-    width: 100%;
-    height: 44px;
-    border-bottom: 1px solid gray;
-  }
-  
-  .main_top_layout {
-    display: flex;
-    align-items: center;
-    position: relative;
-    padding-left: 24px;
-    margin: 0 200px;
-  }
-  
-  .main_top_category {
-    display: block;
-    position: relative;
-    width: 24px;
-    height: 24px;
-    margin-top: -1px;
-    margin-right: 12px;
-  }
-  .main_top_category_tap {
-    position: "relative";
-    left: 0;
-    top: 0;
-  }
-  
-  .main_top_category_list {
-    display: flex;
-  }
-  
-  li {
-    list-style: none;
-    padding: 11px 12px;
-    line-height: 22px;
-  }
-  
-  a {
-    text-decoration: none;
-  }
+}
+header {
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 50;
+}
+.header_layout {
+  display: flex;
+  align-items: center;
+  height: 64px;
+  margin: 0 225px;
+  width: 1440px;
+}
 
-  .profile {
-    display: flex;
-    padding: 0 160px 0 230px;
-    flex-direction: column;
-    background-color: rgba(42, 193, 188, 0.8);
-    box-shadow: 0 5px 5px -2px gray;
-  }
-  
-  .profile-all {
-    display: flex;
-    flex-direction: column;
-    padding: 10px;
-    width: 1440px;
-  }
+.header_logo {
+  width: 100px;
+  margin: 0;
+  z-index: 1;
+}
+
+.header_logo_layout {
+  overflow: hidden;
+  display: block;
+  height: 50px;
+  width: 100%;
+  margin: 1px;
+}
+
+.header_logo_images {
+  width: 100px;
+  height: 40px;
+}
+
+.header_right_layout {
+  display: flex;
+  align-items: center;
+  margin-left: auto;
+  margin-right: 10px;
+}
+
+.header_right_alarm {
+  justify-content: center;
+  position: relative;
+  width: 24px;
+  height: 24px;
+}
+.header_right_login {
+  margin-left: 16px;
+}
+.header_right_login_box {
+  color: black;
+  background-color: #2bc1bf;
+  width: 80px;
+  height: 32px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 4px;
+  font-size: 12px;
+  text-decoration: none;
+}
+
+main {
+  max-width: unset;
+  padding: 0;
+}
+
+
+
+.main_top_layout {
+  display: flex;
+  align-items: center;
+  position: relative;
+  padding-left: 24px;
+  margin: 0 200px;
+}
+
+.main_top_category {
+  display: block;
+  position: relative;
+  width: 24px;
+  height: 24px;
+  margin-top: -1px;
+  margin-right: 12px;
+}
+.main_top_category_tap {
+  position: relative;
+  left: 0;
+  top: 0;
+}
+
+.main_top_category_list {
+  display: flex;
+}
+
+li {
+  list-style: none;
+  padding: 11px 12px;
+  line-height: 22px;
+}
+
+a {
+  text-decoration: none;
+}
+
+.profile {
+  display: flex;
+  margin: 0 auto;
+  flex-direction: column;
+  background-color: rgba(42, 193, 188, 0.8);
+  box-shadow: 0 5px 5px -2px gray;
+  width: 1440px;
+}
+
+.profile-all {
+  display: flex;
+  flex-direction: column;
+  padding: 27px;
+  width: 1440px;
+
+}
+
+.profile-name-option{
+  margin-top: 6px;
+}
+
+#my-favorite-book{
+  padding-left: 27px;
+}
   
   #profile-photo {
     width: 64px;
