게시글 뷰 페이지 좋아요 버튼 댓글 더보기 기능 완 신고 모달창 해야함

--- a/src/main/resources/templates/board/post_view.html
+++ b/src/main/resources/templates/board/post_view.html
@@ -36,7 +36,7 @@
 
         </div>
         <div class="main__post-like-btn-box">
-            <a href=""><img th:src="@{/imgs/administrator/fragment/like.png}" alt=""/><span>좋아요</span></a>
+            <span><img th:src="@{/imgs/administrator/fragment/like.png}" alt=""/><span>좋아요</span></span>
             <div><span th:text="${postDto.likeCount}">0</span>명</div>
         </div>
         <div class="main__post-comment-search-list-box">
