--- a/src/main/resources/templates/board/post_main.html
+++ b/src/main/resources/templates/board/post_main.html
@@ -60,16 +60,16 @@
                 data-postnow="1"
               />
               <li class="post-menu-li post-menu-select-li" data-postnow="1">
-                <a href="" data-type="deal">중고</a><span class="post-menu-select-span"></span>
+                <div data-type="deal">중고</div><span class="post-menu-select-span"></span>
               </li>
               <li class="post-menu-li" data-postnow="2">
-                <a href="" data-type="board">자유</a><span></span>
+                <div data-type="board">자유</div><span></span>
               </li>
               <li class="post-menu-li" data-postnow="3">
-                <a href="" data-type="novel">소설</a><span></span>
+                <div data-type="novel">소설</div><span></span>
               </li>
               <li class="post-menu-li" data-postnow="4">
-                <a href="" data-type="claim">사용자문의</a><span></span>
+                <div data-type="claim">사용자문의</div><span></span>
               </li>
             </ul>
             <div class="main__post-order-type-box">
