--- a/src/main/resources/static/css/board/post_main.css
+++ b/src/main/resources/static/css/board/post_main.css
@@ -153,7 +153,9 @@ a:visited{
   color: #5eadac;
 }
 
-.main__post-menu-ul > li > a {
+.main__post-menu-ul > li > div {
+  color: #888888;
+  font-weight: bold;
   display: block;
   width: 100%;
   height: 100%;
