--- a/src/main/resources/static/css/message/get_letter.css
+++ b/src/main/resources/static/css/message/get_letter.css
@@ -136,7 +136,9 @@ ul {
   color: #5eadac;
 }
 
-.main__post-menu-ul > li > a {
+.main__post-menu-ul > li > div {
+  color: #888888;
+  font-weight: bold;
   display: block;
   width: 100%;
   height: 100%;
